Show IDs in edit mode and fix URL wrapping.

--- a/src/style/bubble.sass
+++ b/src/style/bubble.sass
@@ -1,6 +1,7 @@
 @import "constants"
 
 .bubble
+  overflow-wrap: break-word
   padding: 20px
 
   > :not(:first-child)
